<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgAvelogo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <EditText
        android:hint="@string/enter_mobile_number"
        android:id="@+id/etMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/imgAvelogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>
    <EditText
        android:hint="@string/enter_password"
        android:id="@+id/etPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:maxLines="1"/>
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/etPwd"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:background="@color/anotherColor"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/txtForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:padding="5dp"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:background="#ffffff"/>




</RelativeLayout>